--- a/Web Hosting/Assets/Css/style.css
+++ b/Web Hosting/Assets/Css/style.css
@@ -15,6 +15,7 @@
     height: 50px;
     margin-top: 15px;
     margin-left: 15px;
+    border-radius: 30px;
 }
 .nav{
     position: relative;
@@ -46,6 +47,7 @@
     padding: 10px 15px;
     border-radius: 3px;
     text-decoration: none;
+    border-radius: 30px;
 }
 .default-btn:hover{
     color: #9405C9;
@@ -134,27 +136,26 @@
     font-size: 20px;
 }
 .precos-container{
-    justify-content: space-between;
+    
     display: flex;
     margin-top: 50px;
     width: 90%;
     position: relative;
-    margin-left: auto;
-    margin-right: auto;
+   
 }
 .plano{
     flex: 1 1 200px;
-    max-width: 275px;
+   
     margin-left: 20px;
     margin-right: 20px;
     color: white;
 }
 .planos-container .precos-container .preco{
-    background-color: #7F4BD1;
+    background-color: #9405C9;
     color: white;
     width: 150px;
     height: 150px;
-    margin: auto;
+    margin-left: 65px;
     border-radius: 50%;
     padding-top: 60px;
     font-size: 25px;
@@ -188,17 +189,111 @@
     border: 1px solid white;
     list-style: none;
     width: 280px;
-    background-color: ;
     line-height: 30px;
     padding-top: 10px;
+    border: none;
+    background-color: #000000;
 }
 .planos-container .precos-container .btn-plano{
-    background-color: #A104CD;
+    background-color: #9405C9;
     color: white;
     font-size: 26px;
     height: 50px;
+    border-radius: 30px;
 }
 .planos-container .precos-container .recomendado{
 background-color: aqua;
+color: #ffffff;
+border: 1px #000000;
 }
 
+.buscar-dominio{
+    background-color: white;
+    text-align: center;
+    padding: 5em 0;
+}
+.buscar-dominio h2{
+    color: black;
+    font-size: 42px;
+    margin-top: 0;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+}
+.buscar-dominio p{
+    color: black;
+    font-size: 25px;
+    margin-bottom: 25px;
+}
+.buscar-dominio input{
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    border: none;
+    border-radius: 30px;
+    padding: 10px 20px;
+}
+.buscar-dominio input[type="text"]{
+    width: 60%;
+    margin-bottom: 25px;
+    padding: 20px;
+    font-size: 20px;
+    background-color: black;
+    border-radius: 30px;
+}
+
+.buscar-dominio input[type="submit"]{
+    background-color: #9405C9;
+    color: white;
+    padding: 15px 30px;
+    border-radius: 30px;
+    font-size: 24px;
+    cursor: pointer;
+}
+.contato-container{
+    background-color: black;
+    text-align: center;
+    padding-top: 5em;
+    padding-bottom: 2em;
+}
+.contato-container h2{
+    color: white;
+    font-size: 40px;
+    margin-bottom: 40px;
+}
+.contato-container input, .contato-container textarea{
+    width: 220px;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 10px;
+    border: 1px solid;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    background-color: rgb(188, 188, 188);
+    color: white;
+}
+.contato-container textarea{
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 468px;
+    height: 150px;
+}
+.contato-container input[type=submit]{
+    display: block;
+    position: relative;margin-left: auto;
+    margin-right: auto;
+    background-color: #9405C9;
+    color: white;
+    cursor: pointer;
+    border-radius: 30px;
+}
+footer{
+    text-align: center;
+    font-weight: 700;
+    margin-bottom: 50px;
+    background-color:white
+    color: #000000;
+}
